# monterey-schema

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
AnonymousThing/: index.html
AttributeValue/: index.html
Boolean/: index.html
Container/: index.html
ContainerCategories/: index.html
Curie/: index.html
DataEntity/: index.html
DataGeneration/: index.html
DataProcessing/: index.html
Database/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Derivatization/: index.html
DerivatizationAgents/: index.html
Double/: index.html
Extraction/: index.html
Filtering/: index.html
Float/: index.html
GeneralCategories/: index.html
Instrument/: index.html
Integer/: index.html
Investigation/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
MaterialEntity/: index.html
MaterialOrData/: index.html
MaterialProcessing/: index.html
NamedThing/: index.html
Ncname/: index.html
NmdcClass/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PaperGrade/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
PlannedProcess/: index.html
Protocol/: index.html
ProtocolExecution/: index.html
ProtocolExecutionCategoryEnum/: index.html
QuantityValue/: index.html
Root/: index.html
SampleCollection/: index.html
Sieving/: index.html
Site/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
(+73 files in other folders)
